# 5-final-project-spring-2024-team-fizzbuzz-final

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  docker-compose.yaml  drawing.py  nested_collections.py  pyproject.toml  requirements.txt  setup_mg.py
.github/workflows/: CI-CD.yml  lint.yml
flask_app/: Dockerfile
flask_app/templates/: index.html
src/fizzbuzz_draw/: __main__.py  app.py  nested_collections.py
src/fizzbuzz_draw/static/js/: playing.js  waiting.js
src/fizzbuzz_draw/templates/: base.html  join-game.html  play.html  scores.html
static/css/: play.css  style.css
static/js/: drawing.js  guessing.js  main.js  playing.js  waiting.js
templates/: base-game.html  base.html  home.html  join-game.html  play.html  waiting.html
tests/: test_flask_webapp.py
